--- a/Versus Project/Itch.ioBuild/Versus Project_Data/boot.config
+++ b/Versus Project/Itch.ioBuild/Versus Project_Data/boot.config
@@ -1,9 +1,10 @@
 player-connection-mode=Listen
-player-connection-guid=2922212033
+player-connection-guid=3129813830
 player-connection-debug=0
 player-connection-project-name=Versus Project
+player-connection-ip=10.11.17.32
 gfx-threading-mode=6
 wait-for-native-debugger=0
 hdr-display-enabled=0
 gc-max-time-slice=3
-build-guid=1ab463d5caed4407ad5151d9a4e31236
+build-guid=fb04434c63974a22827540d21eec45f2
